--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,33 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>goit-js-hw-12</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
-
-    <load src="./partials/footer.html" />
-
-    <script type="module" src="main.js"></script>
+    <section class="gallery-section">
+      <form action="submit" class="search-form">
+        <input
+          class="search-input"
+          type="text"
+          name="user_query"
+          placeholder="Search images..."
+          required
+        />
+        <button class="submit-btn" type="submit">Search</button>
+      </form>
+      <ul class="gallery"></ul>
+      <span class="loader"></span>
+      <div class="button-container">
+      <button class="load-more-btn" type="button">Load more</button>
+    </div>
+  </section>
+    <script type="module" src="./main.js" defer></script>
   </body>
 </html>
